# zvec

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: 01-ci-pipeline.yml  02-lint-check.yml  03-macos-linux-build.yml  04-android-build.yml  05-windows-build.yml  06-ios-build.yml  07-linux-riscv-build.yml  08-cmake-subproject-integration.yml  09-diskann-libaio-test.yml  _build_wheel_job.yml  android_build.yml  auto-assign.yml  build_test_wheel.yml  build_wheel.yml  build_wheel_on_windows.yml  clang_tidy.yml  community-pr-handler.yml  continuous_bench.yml  issue-auto-assign.yml  main.yml  nightly_coverage.yml  release.yml
cmake/: bazel.cmake  option.cmake  rpm_install.cmake  utils.cmake  zvec.pc.in  zvec.spec.in  zvec_config.cmake.in
examples/c/: CMakeLists.txt  diskann_example.c  index_example.c
examples/c++/: CMakeLists.txt
examples/c++/db/: main.cc
examples/c_api/: basic_example.c  collection_schema_example.c  doc_example.c  field_schema_example.c  index_example.c  optimized_example.c
python/tests/: conftest.py  test_collection.py  test_collection_diskann.py  test_collection_fts.py  test_collection_fts_vector_hybrid.py  test_collection_group_by.py  test_collection_hnsw_rabitq.py  test_convert.py  test_doc.py  test_fts_query.py  test_gil_release.py  test_params.py  test_query_executor.py  test_reranker.py  test_typing.py  test_vamana.py
python/tests/detail/: distance_helper.py  doc_helper.py  fixture_helper.py  test_collection_crash_recovery_addcolumn.py  test_collection_crash_recovery_altercolumn.py  test_collection_crash_recovery_createindex.py  test_collection_crash_recovery_deletedoc.py  test_collection_ddl.py  (+9 more)
python/zvec/: __init__.py  __init__.pyi  plugin.py  zvec.py
src/: CMakeLists.txt
src/ailego/: CMakeLists.txt
src/binding/python/: CMakeLists.txt  binding.cc  exports.map
src/binding/python/include/: python_plugin.h  python_type.h
src/binding/python/model/: python_collection.cc  python_reranker.cc
src/binding/python/model/common/: python_config.cc  python_plugin.cc
src/binding/python/model/param/: python_param.cc
src/binding/python/typing/: python_type.cc
src/c_api/: API_REFERENCE_CN.md  CMakeLists.txt  c_api.cc
src/core/: CMakeLists.txt
src/core/algorithm/: CMakeLists.txt
src/core/algorithm/cluster/: cluster_params.h  kmeans_cluster.cc  multi_chunk_cluster.cc  multi_chunk_cluster.h  opt_kmeans_cluster.cc
src/core/algorithm/diskann/: CMakeLists.txt  diskann_algorithm.cc  diskann_algorithm.h  diskann_builder.cc  diskann_builder.h  diskann_builder_entity.cc  diskann_builder_entity.h  diskann_context.cc  diskann_context.h  diskann_distance_estimator.cc  diskann_distance_estimator.h  diskann_entity.h  diskann_file_reader.cc  diskann_file_reader.h  diskann_holder.cc  diskann_holder.h  diskann_index.cc  diskann_index.h  diskann_indexer.cc  diskann_indexer.h  diskann_params.h  diskann_pq_table.cc  diskann_pq_table.h  diskann_pq_trainer.cc  diskann_pq_trainer.h  diskann_reducer.cc  diskann_reducer_entity.cc  diskann_reducer_entity.h  diskann_searcher.cc  diskann_searcher.h  diskann_searcher_entity.cc  diskann_searcher_entity.h  diskann_streamer.cc  diskann_streamer.h  diskann_util.h  diskann_visit_filter.h  iouring_loader.h  libaio_loader.h  pq_distance_estimator.h
src/core/algorithm/flat/: flat_builder.h  flat_index_format.h  flat_searcher_context.h  flat_streamer.cc  flat_streamer.h  flat_streamer_context.h
src/core/algorithm/flat_sparse/: flat_sparse_context.h  flat_sparse_search.h  flat_sparse_streamer.h
src/core/algorithm/hnsw/: CMakeLists.txt  hnsw_algorithm.cc  hnsw_algorithm.h  hnsw_builder_entity.cc  hnsw_chunk.cc  hnsw_chunk.h  hnsw_context.cc  hnsw_context.h  hnsw_dist_calculator.h  hnsw_entity.cc  hnsw_entity.h  hnsw_index_provider.h  hnsw_params.h  hnsw_searcher.cc  hnsw_searcher_entity.cc  hnsw_streamer.cc  hnsw_streamer.h  hnsw_streamer_entity.cc  hnsw_streamer_entity.h  hnsw_streamer_entity_new.cc  hnsw_streamer_entity_new.h  hnsw_streamer_rabitq_impl.h
src/core/algorithm/hnsw-rabitq/: rabitq_converter.cc  rabitq_reformer.cc
src/core/algorithm/hnsw_rabitq/: CMakeLists.txt  hnsw_rabitq_algorithm.cc  hnsw_rabitq_algorithm.h  hnsw_rabitq_builder.cc  hnsw_rabitq_builder_entity.cc  hnsw_rabitq_context.cc  hnsw_rabitq_context.h  hnsw_rabitq_entity.cc  hnsw_rabitq_entity.h  hnsw_rabitq_query_algorithm.cc  hnsw_rabitq_query_algorithm.h  hnsw_rabitq_register.cc  hnsw_rabitq_searcher.cc  hnsw_rabitq_streamer.cc  hnsw_rabitq_streamer.h  hnsw_rabitq_streamer_entity.cc  hnsw_rabitq_streamer_entity.h  hnsw_streamer_rabitq_impl.cc  rabitq_converter.cc  rabitq_reformer.cc  rabitq_reformer.h  rabitq_utils.h
src/core/algorithm/hnsw_sparse/: hnsw_sparse_builder.cc  hnsw_sparse_builder_entity.cc  hnsw_sparse_chunk.h  hnsw_sparse_context.cc  hnsw_sparse_context.h  hnsw_sparse_entity.cc  hnsw_sparse_entity.h  hnsw_sparse_streamer.cc  hnsw_sparse_streamer.h  hnsw_sparse_streamer_entity.cc  hnsw_sparse_streamer_entity.h
src/core/algorithm/ivf/: ivf_dumper.cc  ivf_entity.cc  ivf_entity.h  ivf_index_format.h  ivf_params.h  ivf_searcher.cc  ivf_searcher_context.h  ivf_streamer.cc
src/core/algorithm/vamana/: vamana_algorithm.cc  vamana_context.cc  vamana_context.h  vamana_entity.h  vamana_streamer.cc  vamana_streamer.h  vamana_streamer_entity.h
src/db/: CMakeLists.txt  collection.cc
src/turbo/: CMakeLists.txt  turbo.cc
tests/: CMakeLists.txt  test_util.h
tests/c/: CMakeLists.txt  c_api_test.c
tests/c_api/: c_api_test.c
tests/db/: CMakeLists.txt  collection_test.cc  reranker_test.cc
tests/turbo/: CMakeLists.txt  quantized_integer_test.cc  turbo_cosine_test.cc  turbo_euclidean_test.cc  turbo_fht_rotator_test.cc  turbo_fp32_quantizer_test.cc  turbo_inner_product_test.cc  turbo_quantized_integer.cc  turbo_quantized_integer_test.cc  turbo_rabit_quantizer_test.cc
tools/core/: CMakeLists.txt  bench_original.cc  index_meta_helper.h  local_builder.cc  local_builder_original.cc  recall.cc  recall_original.cc  txt2vecs.cc
tools/db/: CMakeLists.txt
(+623 files in other folders)
